--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 #choropleth_map {
+	margin: 20px;
 	top:100px;
 	bottom: 100px; 
 	left: 100px;
@@ -6,6 +7,7 @@
 }
 
 #stacked_bar_chart {
+	margin: 20px;
 	top:100px;
 	bottom: 100px; 
 	left: 100px;
