--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,31 @@
-.visualisation-container {
-	margin: 20px;
-	top:100px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+body *{
+    font-family: 'Open Sans', sans-serif;
 }
 
-/* Add extra space below elements */
-.element-with-extra-space {
-    margin-bottom: 30px; /* Adjust this value to set the desired space */
+h1 {
+    font-weight: 900;
+}
+
+body {
+    background-color: lightgray;
+}
+
+.page {
+    width: 850px;
+    background-color: white;
+    margin: auto;
+    padding: 50px;
+    padding-top: 35px;
+}
+
+.vis-container {
+    width: 100%;
+}
+
+.pure-g {
+    margin-bottom: 40px;
+}
+
+.small-font {
+    font-size: 14px;
 }
