--- a/css/styles.css
+++ b/css/styles.css
@@ -19,10 +19,8 @@ body {
 }
 
 .vis-container {
-	top:100px;
-	bottom: 100px; 
-	left: 100px;
-	right: 100px;
+	width: 100%;
+	height: 100%;
 }
 
 .pure-g {
