--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,13 @@ body {
     height: 500px;
 }
 
+.vis-container2 {
+    width: 100%;
+    padding-bottom: 100%;
+    position: relative;
+    height: 0;
+}
+
 .pure-g {
     margin-bottom: 40px;
 }
