--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,11 @@ body {
     background-color: lightgray;
 }
 
+p {
+    text-align: justify;
+    margin-right: 30px;
+}
+
 .page {
     width: 70%;
     background-color: white;
@@ -52,15 +57,39 @@ body {
 .vertical-line-header {
     border-left: 5px solid;
     height: auto;
+    display: flex;
 }
 
 .title {
     display: flex;
     align-items: center;
+    color: black;
+    margin-left: 10px;
 }
 
 div.right-content {
     flex: 1;
     text-align: right;
     margin-top: 25px;
+    margin-right: 20px;
+}
+
+.number {
+    color: #0496c7;
+}
+
+.main {
+    display: flex;
+    align-items: center;
+    color: black;
+    border-bottom: 4px solid black;
+}
+
+.light {
+    color: grey;
+    text-align: right;
+}
+
+.pure-g {
+    margin-bottom: 50px;
 }
