--- a/css/styles.css
+++ b/css/styles.css
@@ -6,16 +6,19 @@ h1 {
     font-weight: 900;
     font-size: 40px;
     flex: 2;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h2{
     font-size: 30px;
     padding-left: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h3 {
     text-align: center;
     text-decoration: underline;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
@@ -25,6 +28,7 @@ body {
 p {
     text-align: justify;
     margin-right: 30px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .page {
