--- a/css/styles.css
+++ b/css/styles.css
@@ -74,6 +74,7 @@ p {
     align-items: center;
     color: black;
     margin-left: 10px;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 div.right-content {
